add logic using anotation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/springboot
 spring.datasource.username=root
 spring.datasource.password=Truongtd211095
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
-#mybatisProfile Location
-mybatis.config-location=classpath:mybatis-config.xml
-#mapperfile location
-mybatis.mapper-locations=classpath:mapper/*.xml
+##mybatisProfile Location
+#mybatis.config-location=classpath:mybatis-config.xml
+##mapperfile location
+#mybatis.mapper-locations=classpath:mapper/*.xml
